Reducing amount of @info and replacing with @debug , minor fixes
Signed-off-by: Peter Baker <peter.baker122@csiro.au>

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-API_ENDPOINT='https://web-api.reefguide.example.com/api'
+API_ENDPOINT='https://web-api.reefguide.example.com'
 AWS_REGION='ap-southeast-2'
 JOB_TYPES=CRITERIA_POLYGONS
 USERNAME=worker@service.com
