--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 API_ENDPOINT='https://web-api.reefguide.example.com'
 AWS_REGION='ap-southeast-2'
-JOB_TYPES=CRITERIA_POLYGONS
+JOB_TYPES=SUITABILITY_ASSESSMENT,TEST
 USERNAME=worker@service.com
 PASSWORD=<password>
 POLL_INTERVAL_MS=5000
