Making env variables more specific to avoid overlap with sys defined env variables
Signed-off-by: Peter Baker <peter.baker122@csiro.au>

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,8 @@
 API_ENDPOINT='https://web-api.reefguide.example.com'
 AWS_REGION='ap-southeast-2'
 JOB_TYPES=SUITABILITY_ASSESSMENT,TEST
-USERNAME=worker@service.com
-PASSWORD=<password>
+WORKER_USERNAME=worker@service.com
+WORKER_PASSWORD=<password>
 POLL_INTERVAL_MS=5000
 IDLE_TIMEOUT_MS=600000
 JULIA_DEBUG=ReefGuideAPI
