--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataVoyager = "5721bf48-af8e-5845-8445-c9e18126e773"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiskArrays = "3c3547ce-8d99-4f5e-a174-61eb10b00ae3"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
@@ -51,11 +52,14 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
+VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 YAXArrays = "c21b50f5-aa40-41ea-b809-c0f5e47bfa5c"
 
 [compat]
 AWS = "1.92.0"
 AWSS3 = "0.11.2"
+DataVoyager = "1.1.0"
 DiskArrays = "0.4.9"
 JSON3 = "1.14.2"
 Logging = "1.11.0"
@@ -63,4 +67,6 @@ MKL_jll = "2024.2.0"
 NearestNeighbors = "0.4.20"
 Oxygen = "1.7.1"
 Random = "1.11.0"
+VegaDatasets = "2.1.1"
+VegaLite = "3.3.0"
 YAXArrays = "0.6"
