--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiskArrays = "3c3547ce-8d99-4f5e-a174-61eb10b00ae3"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+ExtendableSparse = "95c220a8-a1cf-11e9-0c77-dbfce5f500b3"
 FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
 GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
@@ -44,6 +45,7 @@ ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+SortTileRecursiveTree = "746ee33f-1797-42c2-866d-db2fce69d14d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -57,10 +59,12 @@ YAXArrays = "c21b50f5-aa40-41ea-b809-c0f5e47bfa5c"
 AWS = "1.92.0"
 AWSS3 = "0.11.2"
 DiskArrays = "0.4.9"
+ExtendableSparse = "1.7.1"
 JSON3 = "1.14.2"
 Logging = "1.11.0"
 MKL_jll = "2024.2.0"
 NearestNeighbors = "0.4.20"
 Oxygen = "1.7.1"
 Random = "1.11.0"
+SortTileRecursiveTree = "0.1.4"
 YAXArrays = "0.6"
