--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,8 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
+PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Proj = "c94c279d-25a6-4763-9509-64d165bea63e"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -60,11 +62,14 @@ AWS = "1.92.0"
 AWSS3 = "0.11.2"
 DiskArrays = "0.4.9"
 ExtendableSparse = "1.7.1"
+GeometryOps = "0.1.25"
 JSON3 = "1.14.2"
 Logging = "1.11.0"
 MKL_jll = "2024.2.0"
 NearestNeighbors = "0.4.20"
 Oxygen = "1.7.1"
+PrecompileSignatures = "3.0.3"
+PrecompileTools = "1.2.1"
 Random = "1.11.0"
 SortTileRecursiveTree = "0.1.4"
 YAXArrays = "0.6"
