--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
+Minio = "4281f0d9-7ae0-406e-9172-b7277c1efa20"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
@@ -63,6 +64,7 @@ ExtendableSparse = "1.7.1"
 JSON3 = "1.14.2"
 Logging = "1.11.0"
 MKL_jll = "2024.2.0"
+Minio = "0.2.2"
 NearestNeighbors = "0.4.20"
 Oxygen = "1.7.1"
 Random = "1.11.0"
