--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,13 @@
-API_ENDPOINT='https://web-api.reefguide.example.com'
-AWS_REGION='ap-southeast-2'
-JOB_TYPES=SUITABILITY_ASSESSMENT,TEST
-WORKER_USERNAME=worker@service.com
-WORKER_PASSWORD=<password>
-POLL_INTERVAL_MS=5000
-IDLE_TIMEOUT_MS=600000
+# Local web-api
+API_ENDPOINT=http://localhost:5000
+AWS_REGION=ap-southeast-2
+JOB_TYPES=SUITABILITY_ASSESSMENT,REGIONAL_ASSESSMENT,TEST
+WORKER_USERNAME=worker@email.com
+WORKER_PASSWORD=password
 JULIA_DEBUG=ReefGuideAPI
 CONFIG_PATH=config.toml
+
+# Minio (local)
+S3_ENDPOINT=http://localhost:9000
+MINIO_USERNAME=minioadmin
+MINIO_PASSWORD=minioadmin
